--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>纯CSS实现鼠标经过3D立体动态展示图片特效代码</title>
+<meta charset="utf-8">
+<title>jims-to-MLL</title>
 <link type="text/css" href="css/style.css" rel="stylesheet" />
 </head>
 <body>
